Реализовать первоначальную работу со счетом #3 (#4)
* implement accounts API with CRUD operations

* Update Account.java

* Update Account.java

* refactor:структура проекта становится мультимодульная, добавлена логирование в exceptionHandler, обновил компонентные тесты, данные для тестов вынесены в отдельные json файлы.
Установленно правило для jackson которое запрещает конвертировать разные типы в строку.

--- a/app/src/resources/application.yml
+++ b/app/src/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  liquibase:
+    enabled: true
+    change-log: classpath:/db/changelog/db.changelog-master.yaml
   docker:
     compose:
       enabled: true
@@ -25,4 +28,11 @@ server:
 
 logging:
   level:
+    root: INFO
     org.springframework: INFO
+
+springdoc:
+  swagger-ui:
+    urls:
+      - name: MoneyHarbor API
+        url: /swagger/openapi.yaml
