--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,8 @@ lombok = "1.18.40"
 postgresql = "42.7.7"
 testcontainers = "1.21.2"
 mapstruct = "1.6.3"
+springdoc = "2.8.11"
+openapi = "7.13.0"
 
 [libraries]
 # BOM Spring Boot
@@ -16,6 +18,9 @@ spring-boot-starter-data-jpa = { module = "org.springframework.boot:spring-boot-
 spring-boot-starter-test = { module = "org.springframework.boot:spring-boot-starter-test" }
 spring-boot-starter-validation = { module = "org.springframework.boot:spring-boot-starter-validation" }
 spring-boot-configuration-processor = { module = "org.springframework.boot:spring-boot-configuration-processor" }
+spring-boot-starter-webmvc-ui = { module = "org.springdoc:springdoc-openapi-starter-webmvc-ui",version.ref = "springdoc" }
+swagger-annotations = { module = "io.swagger.core.v3:swagger-annotations", version = "2.2.22" }
+spring-boot-testcontainers = { module = "org.springframework.boot:spring-boot-testcontainers" }
 
 commons-compress = { module = "org.apache.commons:commons-compress", version = "1.28.0" }
 
@@ -23,11 +28,12 @@ commons-compress = { module = "org.apache.commons:commons-compress", version = "
 spring-boot-devtools = { module = "org.springframework.boot:spring-boot-devtools" }
 spring-boot-docker-compose = { module = "org.springframework.boot:spring-boot-docker-compose" }
 
-# Внешние либы с версиями
+# Внешние либы
 postgresql = { module = "org.postgresql:postgresql", version.ref = "postgresql" }
 testcontainers = { module = "org.testcontainers:testcontainers", version.ref = "testcontainers" }
 testcontainers-junit = { module = "org.testcontainers:junit-jupiter", version.ref = "testcontainers" }
 testcontainers-postgresql = { module = "org.testcontainers:postgresql", version.ref = "testcontainers" }
+liquibase-core = { module = "org.liquibase:liquibase-core" }
 
 # MapStruct / Lombok
 mapstruct = { module = "org.mapstruct:mapstruct", version.ref = "mapstruct" }
@@ -37,3 +43,4 @@ lombok-mapstruct-binding = { module = "org.projectlombok:lombok-mapstruct-bindin
 
 [plugins]
 spring-boot = { id = "org.springframework.boot", version.ref = "spring-boot" }
+openapi-generator = { id = "org.openapi.generator", version.ref = "openapi" }
