--- a/app/src/resources/db/changelog/db.changelog-master.yaml
+++ b/app/src/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
-  - include:
-      file: db/changelog/001-init-accounts.sql
+  - include: { file: 001-init-accounts.sql,
+               relativeToChangelogFile: true }
+  - include: { file: 002-auth-and-fk.sql,
+               relativeToChangelogFile: true }
