Добавить Dockerfile и настроить контейнеризацию приложения #10

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,5 +17,18 @@ services:
       retries: 20
     labels:
       org.springframework.boot.service-connection: postgres
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: moneyharbor-app
+    depends_on:
+      - postgres
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/moneyharbor
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
+    ports:
+      - "8080:8080"
 volumes:
   pg_data:
