--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,6 +29,11 @@ services:
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
     ports:
-      - "8080:8080"
+      - "8081:8080"
+    healthcheck:
+      test: [ "CMD-SHELL", "wget -qO- http://localhost:8080/actuator/health >/dev/null 2>&1 || exit 1" ]
+      interval: 1s
+      timeout: 3s
+      retries: 20
 volumes:
   pg_data:
