--- a/app/src/resources/application.yml
+++ b/app/src/resources/application.yml
@@ -5,6 +5,7 @@ spring:
   docker:
     compose:
       enabled: true
+      file: docker-compose.dev.yml
       lifecycle-management: start_and_stop
   application:
     name: money-harbor
