--- a/app/src/resources/db/changelog/db.changelog-master.yaml
+++ b/app/src/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,5 @@ databaseChangeLog:
                relativeToChangelogFile: true }
   - include: { file: 003-init-operations.sql,
                relativeToChangelogFile: true }
+  - include: { file: 004-init-category.sql,
+               relativeToChangelogFile: true }
