10 сделать dockerfile и дополнить docker compose (#16)
* Добавить Dockerfile и настроить контейнеризацию приложения #10

* Обновить конфигурацию Docker: изменить порт приложения на 8081, для предотвращения конфликта с IDEA RUN

* Разделил Docker конфигурацию, создал docker-compose.dev.yml для разработки и вернул порт 8080 в основном compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,5 +17,23 @@ services:
       retries: 20
     labels:
       org.springframework.boot.service-connection: postgres
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: moneyharbor-app
+    depends_on:
+      - postgres
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/moneyharbor
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
+    ports:
+      - "8080:8080"
+    healthcheck:
+      test: [ "CMD-SHELL", "wget -qO- http://localhost:8080/actuator/health >/dev/null 2>&1 || exit 1" ]
+      interval: 1s
+      timeout: 3s
+      retries: 20
 volumes:
   pg_data:
