--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,12 @@ name: CI
 
 on:
   push:
+  workflow_dispatch:
+    inputs:
+      failOnCVSS:
+        description: "Fail if CVSS >= (0..10). Recommended: 7"
+        required: false
+        default: "7"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -31,7 +37,7 @@ jobs:
 
 
   tests:
-    name: Run all tests
+    name: Gradle test (all modules)
     runs-on: ubuntu-latest
     needs: build
 
@@ -54,9 +60,38 @@ jobs:
       - name: Gradle test(all modules)
         run: ./gradlew test --no-daemon
 
-      - name: Uploads test reports (all modules)
+      - name: Upload test reports (all modules)
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: tests-reports
           path: "**/build/reports/tests/test/**"
+
+  depcheck_manual:
+    name: Dependency scan (manual)
+    if: ${{ github.event_name == 'workflow_dispatch' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Run OWASP Dependency-Check (fail on CVSS threshold)
+        uses: dependency-check/Dependency-Check_Action@main
+        id: depcheck
+        env:
+          JAVA_HOME: /opt/jdk
+        with:
+          project: "moneyharbor"
+          path: "."
+          format: "HTML"
+          out: "reports"
+          args: >
+            --failOnCVSS ${{ github.event.inputs.failOnCVSS }}
+
+      - name: Upload HTML report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: dependency-check-report
+          path: reports/dependency-check-report.html
+
