--- a/app/src/resources/db/changelog/db.changelog-master.yaml
+++ b/app/src/resources/db/changelog/db.changelog-master.yaml
@@ -1,10 +1,17 @@
 databaseChangeLog:
   - include: { file: 001-init-accounts.sql,
                relativeToChangelogFile: true }
-  - include: { file: 004-init-category.sql,
-               relativeToChangelogFile: true }
   - include: { file: 002-auth-and-fk.sql,
                relativeToChangelogFile: true }
   - include: { file: 003-init-operations.sql,
                relativeToChangelogFile: true }
+  - include: { file: 004-init-category.sql,
+                 relativeToChangelogFile: true }
+  - include: { file: 005-rename-category-to-categories.sql,
+               relativeToChangelogFile: true }
+  - include: { file: 006-add-category-id-column-to-operations.sql,
+               relativeToChangelogFile: true }
+  - include: { file: 007-add-index-account-to-operations.sql,
+               relativeToChangelogFile: true }
+
 
