--- a/app/src/resources/db/changelog/db.changelog-master.yaml
+++ b/app/src/resources/db/changelog/db.changelog-master.yaml
@@ -6,4 +6,9 @@ databaseChangeLog:
   - include: { file: 003-init-operations.sql,
                relativeToChangelogFile: true }
   - include: { file: 004-init-category.sql,
+                 relativeToChangelogFile: true }
+  - include: { file: 005-update-operations-with-category.sql,
                relativeToChangelogFile: true }
+
+
+
